--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Gifted Tech",
   "license": "GPL-3.0 license",
   "dependencies": {
-    "gifted-baileys": "^1.5.1",
+    "gifted-baileys": "npm:@whiskeysockets/baileys@6.7.9",
     "qrcode": "^1.5.3",
     "awesome-phonenumber": "^2.64.0",
     "megajs": "^1.1.0",
